# archive_optitrack

./: CMakeLists.txt  README.md  quad_archive.md
config/: vision_pose.yaml
html/: index.html
include/mocap_optitrack/: Quad.h  QuadScripts.h
latex/: refman.tex
launch/: calibrate.launch  mocap.launch  script_test.launch  vision_pose.launch
src/: CMakeLists.txt  Quad.cpp  QuadScripts.cpp  multiquad_script_test.cpp  script_test.cpp
